# pacsolve

./: .env  .gitignore  .gitmodules  Package.resolved  Package.swift  README.html  README.md  Vagrantfile  arborist_test_driver.js  count_nodes.sh  slides.key
.archived/: .env
Experiments/: .gitignore  experiment_compare_prod_sizes.sh  job_experiment_compare_prod_sizes.bash  prepare_datasets_job.bash  query_files.txt  runner_job.bash
PythonSolver/: json_loading.py  main.py  main.sh  solver.py
PythonSolvingHarness/: main.sh
RosetteSolver/: .gitignore  README.md  bad_input.json  consistency.rkt  dsl-primitives-concrete.rkt  dsl-primitives-symbolic.rkt  dsl-primitives.rkt  function-dsl.rkt  graph-constraints.rkt  graph-interface.rkt  graph-optimization.rkt  graph-sketching.rkt  graph.rkt  load-query.rkt  query-access.rkt  query.rkt  rosette-solver.rkt  run_tests.py  solution.rkt  write-solution.rkt
SolversScratch/: README.md  model-no-duplicates-yes-cycles.smt2  rosette-solver.rkt
Tests/: LinuxMain.swift
Z3Solver/: Cargo.toml
_archived/: .gitignore
artifact/: .gitignore  Dockerfile  README.html  README.md  build_docker.sh
discovery_donald/: .gitignore  README  arjun_exp_array_jobs  arjun_exp_array_jobs_auditfix  arjun_exp_array_jobs_auditfixforce  arjun_exp_array_jobs_maxnpmcveoldness  (+12 more)
z3_solver/: Cargo.toml
z3_solver/examples/: input_sample_functions.json  small_input_new.json  tmp_out.json
z3_solver/src/: constraint_generator.rs  main.rs  solver.rs
z3_solver/src/input_query/: input_json_format.rs  mod.rs  query_traversal.rs  universe_traversal.rs
(+101116 files in other folders)
