[package]
name = "z3_solver"
version = "0.1.0"
authors = ["Donald Pinckney <donald_pinckney@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"